--- a/index.html
+++ b/index.html
@@ -228,7 +228,16 @@
           <li class="fragment">Preferiblemente un proyecto REAL</li>
           </ul>
         </section>
-
+        <section>
+          <h2>Apercibimientos</h2>
+          <ul>
+          <li class="fragment">Anulación de matrícula - No asistencia la primera semana del curso.</li>
+          <li class="fragment">Baja de oficio - 10 días Apercibimiento - baja 15 días consecutivos 0 25 discontinuos.</li>
+          <li class="fragment">Pérdida de derecho a Evaluación contínua - 6% de faltas Apercibimiento - 10% faltas PD</li>
+          <li class="fragment">Renuncia - Se puede solicitar una sola vez por ciclo. Justificar</li>
+          <li class="fragment">Baja voluntaria - deberá ser solicitada por el alumno</li>
+          </ul>
+        </section>
         <section data-transition="linear" data-background-transition="slide">
           <h1>¡Gracias!</h1>
         </section>
