--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
         <section>
           <h2>Módulos de 2º DAW</h2>
           <ul>
-            <li>Desarrollo web en entorno servidor - 175 horas - 10 sesiones</li>
-            <li>Desarrollo web en entorno cliente - 157 horas - 9 sesiones</li>
-            <li>Despliegue de aplicaciones web - 88 horas - 5 sesiones</li>
-            <li>Desarrollo de interfaces web - 157 horas - 9 sesiones</li>
-            <li>Empresa e iniciativa emprendedora - 53 horas - 3 sesiones</li>
-            <li>Proyecto de Desarrollo de Aplicaciones Web - 26 horas - a realizar durante o tras la FCT </li>
-            <li>Formación en Centro de Trabajo (FCT)  - 384 horas - Tercer trimestre</li>
+            <li class="fragment">Desarrollo web en entorno servidor - 175 horas - 10 sesiones</li>
+            <li class="fragment">Desarrollo web en entorno cliente - 157 horas - 9 sesiones</li>
+            <li class="fragment">Despliegue de aplicaciones web - 88 horas - 5 sesiones</li>
+            <li class="fragment">Desarrollo de interfaces web - 157 horas - 9 sesiones</li>
+            <li class="fragment">Empresa e iniciativa emprendedora - 53 horas - 3 sesiones</li>
+            <li class="fragment">Proyecto de Desarrollo de Aplicaciones Web - 26 horas - a realizar durante o tras la FCT </li>
+            <li class="fragment">Formación en Centro de Trabajo (FCT)  - 384 horas - Tercer trimestre</li>
           </ul>
         </section>
 
@@ -93,13 +93,13 @@
               <th></th><th align="center">Lunes</th><th align="center">Martes</th><th align="center">Miércoles</th><th align="center">Jueves</th><th align="center">Viernes</th>
             </tr>
             <tr>
-              <td>1</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DWES</td><td>DWES</td>
+              <td>1</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DIW</td><td>DIW</td>
             </tr>
             <tr>
-              <td>2</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DWES</td><td>DWES</td>
+              <td>2</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DIW</td><td>DIW</td>
             </tr>
             <tr>
-              <td>3</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DWES</td><td>DWES</td>
+              <td>3</td><td>EIE</td><td>INT</td><td>DWEC</td><td>DIW</td><td>DIW</td>
             </tr>
             <tr>
               <td colspan="6" >
@@ -109,40 +109,39 @@
               </td>
             </tr>
             <tr>
-              <td>4</td><td>HLC</td><td>DWES</td><td>INT</td><td>DAW</td><td>DWEC</td>
+              <td>4</td><td>HLC</td><td>DIW</td><td>INT</td><td>DAW</td><td>DWEC</td>
             </tr>
             <tr>
-              <td>5</td><td>HLC</td><td>DWES</td><td>INT</td><td>DAW</td><td>DWEC</td>
+              <td>5</td><td>HLC</td><td>DIW</td><td>INT</td><td>DAW</td><td>DWEC</td>
             </tr>
             <tr>
-              <td>6</td><td>HLC</td><td>DWES</td><td>INT</td><td>DAW</td><td>DWEC</td>
+              <td>6</td><td>HLC</td><td>DIW</td><td>INT</td><td>DAW</td><td>DWEC</td>
             </tr>
           </table> -->
           </p>
         </section>
 
         <!-- <section data-transition="concave">
-          <h1>Desarrollo Web</h1>
-          <h1>en Entorno Servidor</h1>
-          <h1><i class="fa fa-desktop"></i></h1>
+          <h2>Diseño de interfaces Web</h2>
+          <h2><i class="fa fa-desktop"></i></h2>
         </section>
 
         <section>
-          <a href="https://leanpub.com/aprendephpconejercicios">
-          <img src="img/aprendephp.png" height="400">
+          <a href=">
+          <img src="img/" height="400">
           </a>
           <p>
-          <i class="fa fa-leanpub"></i> <a href="https://leanpub.com/aprendephpconejercicios">"Aprende PHP con Ejercicios"</a>
+          <i class="fa fa-leanpub"></i>"Aprende a diseñar web con Ejercicios"
           </p>
         </section>
 
         <section>
-          <h2>No te olvides de Java</h2>
-          <a href="https://leanpub.com/aprendejava">
-          <img src="img/aprendejava.jpg" height="400">
+          <h2>No te olvides de la accesibilidad y la usabilidad</h2>
+          <a href="">
+          <img src="img/usuableAccesible.jpg" height="400">
           </a>
           <p>
-          <i class="fa fa-leanpub"></i> <a href="https://leanpub.com/aprendejava">"Aprende Java con Ejercicios"</a>
+          <i class="fa fa-leanpub"></i>"Aprende a crear páginas accesibles y usables"
           </p>
           
           
@@ -209,8 +208,8 @@
             <li>
               Dos periodos (384 horas) de prácticas en empresas
               <ol>
-                <li>Desde marzo a junio</li>
-                <li>Desde septiembre a diciembre</li>
+                <li class="fragment">Desde marzo a junio</li>
+                <li class="fragment">Desde septiembre a diciembre</li>
               </ol>
             </li>
             <li class="fragment">Imprescindible aprobar TODOS los módulos</li>
@@ -220,12 +219,17 @@
         <section>
           <h2>Proyecto de Desarrollo<br>de Aplicaciones Web</h2>
           <ul>
-          <li class="fragment">Aplicación o página web completa.</li>
-          <li class="fragment">Debería tocar todos los módulos, principalmente los de segundo.</li>
-          <li class="fragment">Debe cumplir TODOS los requisitos pedidos</li>
-          <li class="fragment">Documentación</li>
-          <li class="fragment">Presentación</li>
-          <li class="fragment">Preferiblemente un proyecto REAL</li>
+            <li>Tener todos los módulos aprobados.</li>
+            <li>A realizar durante el período de FT o tras superarla.</li>
+          </ul>
+          <h3>Características del proyecto</h3>
+          <ul>
+            <li class="fragment">Aplicación o página web completa.</li>
+            <li class="fragment">Debería tocar todos los módulos, principalmente los de segundo.</li>
+            <li class="fragment">Debe cumplir TODOS los requisitos pedidos</li>
+            <li class="fragment">Documentación</li>
+            <li class="fragment">Presentación</li>
+            <li class="fragment">Preferiblemente un proyecto REAL</li>
           </ul>
         </section>
         <section>
@@ -245,7 +249,7 @@
        <!--
         <section data-transition="zoom">
           <h2>¿Qué hago ahora?</h2>
-          <h3><i class="fa fa-arrow-circle-right"></i> Darme de alta en el curso DWES de la Moodle</h3>
+          <h3><i class="fa fa-arrow-circle-right"></i> Darme de alta en el curso DIW de la Moodle</h3>
           <h3><i class="fa fa-arrow-circle-right"></i> Rellenar el formulario de recogida de datos</h3>
           <h3><i class="fa fa-arrow-circle-right"></i> Actualizar el documento de asignación de portátiles</h3>
         </section>      
